--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,19 @@
   "name": "practical-test",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.4.4",
-    "ui-router": "0.2.15",
-    "bootstrap": "3.3.5",
-    "oclazyload": "1.0.4",
-    "ng-lodash": "0.2.3",
+    "angular": "~1.5.6",
+    "ui-router": "~0.2.15",
+    "bootstrap": "~3.3.5",
+    "oclazyload": "~1.0.4",
+    "ng-lodash": "~0.2.3",
     "components-font-awesome": "~4.6.3",
-    "jquery": "2.1.4",
-    "lodash": "~4.13.1"
+    "jquery": "~2.1.4",
+    "lodash": "~4.13.1",
+    "ngToast": "ngtoast#~2.0.0",
+    "angular-animate": "~1.5.6"
   },
   "devDependencies": {},
   "resolutions": {
-    "angular": ">=1.2.x <=1.4.x"
+    "angular": ">=1.2.x <=1.5.x"
   }
 }
