--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "PracticalTest",
   "version": "0.0.1",
   "dependencies": {
-    "body-parser": "^1.15.1",
-    "connect-mongo": "^1.2.0",
-    "ejs": "^2.4.2",
-    "express": "^4.13.4",
-    "lodash": "^4.13.1",
-    "method-override": "^2.3.6",
-    "request": "^2.72.0",
-    "winston": "^2.2.0"
+    "body-parser": "~1.15.1",
+    "connect-mongo": "~1.2.0",
+    "ejs": "~2.4.2",
+    "express": "~4.13.4",
+    "lodash": "~4.13.1",
+    "method-override": "~2.3.6",
+    "request": "~2.72.0",
+    "winston": "~2.2.0"
   },
   "devDependencies": {},
   "engines": {
